fixed spacing issues on mobile view

--- a/source/assets/less/pages/_index.less
+++ b/source/assets/less/pages/_index.less
@@ -1,11 +1,12 @@
 .background {
   background: url('@{imgPath}bkg.png');
+  // display: block;
 }
 .shadow {
   .vertGradient(fade(@black, 0) 0%, fade(@black, 66) 66%);
+  .flexBox();
 }
 .background, .shadow {
-  display: block;
   min-height: 100%;
   min-height: 100vh;
   background-size: cover;
@@ -15,12 +16,13 @@
 article {
   @pSpacing: 15;
   display: block;
-  max-width: @pSpacing * 1%;
-  max-width: @pSpacing * 1vw;
+  // max-width: @pSpacing * 1%;
+  // max-width: @pSpacing * 1vw;
   // min-width: 500px;
-  min-width: 25em;
-  margin: @pSpacing * 1% 0 0 @pSpacing * 1%;
-  margin: @pSpacing * 1vw 0 0 @pSpacing * 1vw;
+  // min-width: 25em;
+  .flex(0, 1, 25em);
+  margin: @pSpacing *  1%   @pSpacing *  1%   0   @pSpacing *  1%;
+  margin: @pSpacing * 1vw   @pSpacing * 1vw   0   @pSpacing * 1vw;
   a {
     position: relative;
     z-index: 1;
